3 files modified, 1 added

--- a/src/app/graphic-design/graphic-design.component.html
+++ b/src/app/graphic-design/graphic-design.component.html
@@ -1,22 +1,20 @@
-<h3>NYC Tourist Portfolio</h3>
+<h3>Beautiful Earth Portfolio</h3>
 
 
 
 <div class="simple-article-header">
-  <!-- Article Published Date & Reading Time -->
-  <p class="article-date-read">Published on: 05 December, 2020 - 5 min read</p>
-  
+ 
   <!-- Article Title -->
   <h4 class="article-title">
     <a href="#">
-      10 BEST PLACES TO SEE IN NEW YORK CITY
+     <h1> Most Beautiful Places in the World</h1>
     </a>
   </h4>
 
   <!-- Article Author Name & Comment Hyperlink -->
   <p class="article-author-comments">
-    <em>by <a href="#">Muhammad Khan</a></em> -
-    <a class="article-comments" href="#">3 Comments</a>
+    <em>by <a href="#">LYNDSEY MATTHEWS, LAUREN HUBBARD AND EMY RODRIGUEZ FLORES</a></em> -
+    <a class="article-comments" href="#"> OCT 23, 2019</a>
   </p>
 
   <!-- Article Social Links -->
@@ -38,20 +36,22 @@
   <!-- Article Image -->
   <div class="article-post-image">
     <div class="thumbnail">
-      <img src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F38670528%2F108919755319%2F1%2Foriginal.jpg?auto=format%2Ccompress&q=75&sharp=10&s=af6bd439922cbde45d119e1ca00cc446" width="600">
+      <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/great-ocean-road-174028267-1494616481.jpg?crop=1.00xw:1.00xh;0,0&resize=980:*" width="600">
     </div>
   </div>
 
   <!-- Article Post Content -->
   <div class="article-post-content">
-    <h5><b>Best Months to Visit</b></h5>
-    <p><b>The best time to visit New York is anytime. Each season in Gotham offers visitors plenty of reasons to visit. Early fall offers crisp breezes, bright sun and comfortable temperatures while late fall and winter make merry with the Macy's Thanksgiving Day Parade and holiday decorations. Deep winter – January and February – is cold, but that also means cheaper hotel rates. Spring is glorious and New Yorkers celebrate the thaw by taking to the streets, shopping at outdoor markets, frolicking in Central Park and dining outside. Summer is hot, but hey, so are lots of places, and at least this is New York.</b></p>
+    <h5><b>Most Beautiful Places in the World</b></h5>
+    <p><b> There are so many amazing places around the globe to see, we couldn't possibly include them all in just one list. But, these breathtaking destinations are definitely worth bumping to the top of your travel bucket list–whether you're looking to relax on a beach, get off the grid or explore a city.</b></p>
   </div>
 
 </div>
 
   <!-- Importing images form graphic.json into graphic design page -->
   <app-portfolio-lightbox portfolioURL = '/assets/graphic.json'></app-portfolio-lightbox>
+
+   <app-portfolio-lightbox portfolioURL = '/assets/earth.json'></app-portfolio-lightbox>
 
 
 
